configured for netlify and fauna

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@nuxtjs/sitemap": "^2.4.0",
     "core-js": "^3.19.3",
     "focus-trap-vue": "^1.1.1",
+    "glicko2": "^0.8.7",
     "nuxt": "^2.15.8",
     "vue": "^2.6.14",
     "vue-server-renderer": "^2.6.14",
