--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
   },
   "dependencies": {
     "@jamestomasino/scroll-frame": "^1.1.0",
+    "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/redirect-module": "^0.3.1",
     "@nuxtjs/robots": "^2.5.0",
     "@nuxtjs/sitemap": "^2.4.0",
     "core-js": "^3.19.3",
+    "faunadb": "^4.5.4",
     "focus-trap-vue": "^1.1.1",
     "glicko2": "^0.8.7",
     "nuxt": "^2.15.8",
